# fs-rotation

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
fast_stream_22/matching/: __init__.py  match.py  models.py  pair.py  read_in.py
fast_stream_22/matching/SEFS/: __init__.py  models.py
fast_stream_22/matching/generalist/: models.py
fast_stream_22/scripts/: process_pairs.py
fast_stream_22/specialism/: models.py  pair.py
fast_stream_22/specialism/SEFS/: models.py
fast_stream_22/specialism/generalist/: __init__.py  models.py
fast_stream_22/web_app/: app.py
matching/: match.py  models.py  read_in.py  scoring.py
tests/: conftest.py  test_match.py  test_pair.py  test_process.py  test_read_in.py  test_script.py
tests/test_generalist/: test_candidate.py  test_pair.py  test_role.py  test_script.py
tests/test_sefs/: test_pair.py
