[tool.poetry]
name = "fast-stream-22"
version = "0.0.0"
description = ""
authors = ["jonathan.kerr <jonathan.kerr@digital.cabinet-office.gov.uk>"]
readme = "README.md"
packages = [{include = "fast_stream_22"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
munkres = "^1.1.4"
numpy = "^1.23.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^2.20.0"
bumpversion = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
