[tool.poetry]
name = "fast-stream-22"
version = "0.13.1"
description = ""
authors = ["jonathan.kerr <jonathan.kerr@digital.cabinet-office.gov.uk>"]
readme = "README.md"
packages = [{include = "fast_stream_22"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
jk-munkres = "^1.0.0"
numpy = "^1.23.4"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.development.dependencies]
pre-commit = "^2.20.0"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pairing_script = "fast_stream_22.scripts.process_pairs:process_matches"
